--- a/forgot.html
+++ b/forgot.html
@@ -3,42 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <title>Quên mật khẩu</title>
+  <link rel="icon" type="image/png" href="logo.png">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { background: #f5f7fa; display: flex; align-items: center; justify-content: center; height: 100vh; font-family: Arial; }
-    .forgot-box { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 16px rgba(0,0,0,0.1); width: 320px; }
-    .forgot-box h2 { margin-bottom: 20px; text-align: center; }
-    .forgot-box input { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px; }
-    .forgot-box button { width: 100%; padding: 12px; background: #4a90e2; color: white; border: none; border-radius: 5px; cursor: pointer; }
-    .forgot-box button:hover { background: #357ab8; }
-    .forgot-box .error { color: red; text-align: center; min-height: 20px; margin-bottom: 8px; }
+    body {background:radial-gradient(ellipse at 60% 40%,#233d61 0%,#0a1931 100%);font-family:'Montserrat',Arial;margin:0;display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:100vh;}
+    .box{background:rgba(18,32,67,.96);padding:40px 28px 34px;border-radius:20px;box-shadow:0 6px 32px #12204385;max-width:400px;width:90%;text-align:center;backdrop-filter:blur(2.5px);}
+    .box h2{color:#63aaff;font-size:1.8rem;margin-bottom:20px;letter-spacing:.8px;text-shadow:0 2px 12px #185adb34;}
+    .box input{width:100%;padding:12px;margin-bottom:18px;border:1px solid #ddd;border-radius:8px;font-size:1rem;outline:none;}
+    .box input:focus{border:1.5px solid #4a90e2;}
+    .box button{width:100%;padding:14px 0;background:linear-gradient(90deg,#3a7bd5,#4a90e2);color:white;border:none;border-radius:8px;font-size:1.1rem;font-weight:700;cursor:pointer;box-shadow:0 4px 18px #13204334;transition:transform .18s;}
+    .box button:hover{transform:scale(1.04);}
+    footer{margin-top:40px;width:100%;background:#122043;color:#8ebeff;text-align:center;padding:26px 10px 16px;font-size:1.08rem;letter-spacing:.22px;border-radius:22px 22px 0 0;box-shadow:0 -3px 22px #0a193112;}
   </style>
 </head>
 <body>
-  <form class="forgot-box" id="forgotForm">
-    <h2>Quên mật khẩu</h2>
-    <div class="error" id="error"></div>
+  <div class="box">
+    <h2>Khôi phục mật khẩu</h2>
     <input type="email" id="email" placeholder="Nhập email đã đăng ký" required>
-    <button type="submit">Gửi mail khôi phục</button>
-  </form>
+    <button onclick="forgot()">Gửi liên kết khôi phục</button>
+  </div>
+
+  <footer id="footer"></footer>
+
   <script>
-    const backendUrl = "https://login-backend-pg7j.onrender.com";
-    document.getElementById('forgotForm').onsubmit = async function(e) {
-      e.preventDefault();
-      const email = document.getElementById('email').value;
-      const res = await fetch(`${backendUrl}/forgot-password`, {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({ email })
-      });
-      const data = await res.json();
-      if (res.ok) {
-        alert(data.message);
-        window.location.href = "login.html";
-      } else {
-        document.getElementById('error').textContent = data.message || "Gửi mail thất bại!";
-      }
+    const backendUrl="https://login-backend-pg7j.onrender.com";
+    async function forgot(){
+      const email=document.getElementById('email').value;
+      const res=await fetch(`${backendUrl}/forgot-password`,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({email})});
+      const data=await res.json();
+      alert(data.message||"Yêu cầu thất bại");
     }
+    fetch('footer.html').then(r=>r.text()).then(html=>document.getElementById('footer').innerHTML=html);
   </script>
 </body>
 </html>
