--- a/login.html
+++ b/login.html
@@ -25,6 +25,8 @@
       <div id="error"></div>
       <input type="text" id="username" placeholder="Tên đăng nhập hoặc email" required>
       <input type="password" id="password" placeholder="Mật khẩu" required>
+      <input type="checkbox" onclick="password.type= this.
+        checked ? 'text': 'password;">
       <button onclick="login()">Đăng nhập</button>
       <div class="link">Chưa có tài khoản? <a href="register.html">Đăng ký</a> | <a href="forgot.html">Quên mật khẩu?</a></div>
     </div>
